# mid360-car

./: .cproject  .cproject.bak  .mxproject  .project.bak  CMakeLists.txt  LED.ioc  STM32F407IGHX_FLASH.ld  STM32F407IGHX_RAM.ld
Core/Inc/: bsp_can.h  goal_receiver.h  main.h  pid.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Core/Src/: bsp_can.c  can.c  dma.c  goal_receiver.c  gpio.c  main.c  pid.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
Core/application/: BMI088Middleware.c  BMI088Middleware.h  BMI088driver.c  BMI088driver.h  BMI088reg.h  CAN_receive.c  CAN_receive.h  bsp_rc.c  remote_control.c  remote_control.h  struct_typedef.h
FAST_LIO_SAM/: CMakeLists.txt
FAST_LIO_SAM/Log/: fast_lio_time_log.csv  mat_pre.txt
FAST_LIO_SAM/config/: avia.yaml  avia_debug.yaml
FAST_LIO_SAM/launch/: mapping_avia.launch
FAST_LIO_SAM/rviz_cfg/: loam_livox.rviz
FAST_LIO_SAM/scripts/: global_localization.py  goal_sender_node.py  path_record.py  path_record1.py  transform_fusion.py
FAST_LIO_SAM/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
FAST_LIO_SAM/srv/: AddPoint.srv
USB_DEVICE/App/: usbd_cdc_if.c
cmake/stm32cubemx/: CMakeLists.txt
